# notion-backup

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: blocks.rs  cli.rs  client.rs  config.rs  dump.rs  git_sync.rs  lib.rs  main.rs  render.rs  util.rs
tests/: blocks.rs  dump.rs  render.rs  sanitize.rs  util.rs
