[package]
name = "notion-backup"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Back up an accessible Notion workspace to a git repository."
license = "GPL-3.0-or-later"

[lib]
name = "notion_backup"
path = "src/lib.rs"

[[bin]]
name = "notion-backup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
regex = "1"
serde_json = "1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
